# iac_threatgen

./: .env.example  .gitignore  README.md  action.yml  pyproject.toml  requirements.lock.txt  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  threatgen.yml
docs/: 01-project-charter.md  02-requirements.md  03-architecture.md  04-usage.md  milestones.md  risk-register.md
examples/: sample_report.json  sample_report.md
scripts/: bootstrap.ps1  bootstrap.sh  build_attack_corpus.py  check_env.py
src/iac_threatgen/: __init__.py  cli.py  constants.py  dfd.py  github_pr.py  llm.py  pipeline.py  rag.py  remediation.py  secrets_scan.py  state.py  threats.py  validation.py
src/iac_threatgen/data/: attack_cloud_corpus.json  nist_csf_subcategories.json
src/iac_threatgen/parsers/: __init__.py  kubernetes.py  terraform.py
src/iac_threatgen/schemas/: resource_graph.schema.json  threat_report.schema.json
tests/: conftest.py  test_cli.py  test_dfd.py  test_github_pr.py  test_injection.py  test_llm.py  test_llm_json.py  test_parsers.py  test_pipeline_mocked.py  test_pipeline_remediation.py  test_remediation.py  test_secrets.py  test_validation.py
tests/fixtures/sample_stack/: k8s.yaml  main.tf
